<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailMediaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/tv_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/gray_dark"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/gray_dark"
            android:layout_below="@+id/tv_studio"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime_movie"
            android:textColor="@color/gray_dark"
            android:layout_below="@+id/tv_type"
            android:layout_marginHorizontal="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            style="@style/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_runtime"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="@dimen/font_nm"
            android:layout_below="@+id/rv_genre"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/tv_view_more_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/view_more"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/font_nm"
            android:layout_below="@id/tv_synopsis"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/tv_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            android:textSize="@dimen/font_nm"
            android:textColor="@color/blue"
            android:layout_below="@+id/tv_view_more_synopsis"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation"
            style="@style/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recommendation"
            android:paddingHorizontal="16dp"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>