<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".ui.discover.DiscoverFragment"
    android:background="@drawable/bg_layout_main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.BLU.AppBarOverlay"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discover_tagline"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"/>

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        style="@style/SearchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:queryHint="Search movies or tv shows..." />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                app:chipSpacingHorizontal="8dp"
                app:singleLine="true"
                android:scrollbars="none"
                android:clipToPadding="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_latest_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_release" />
            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:drawablePadding="8dp"
                        android:text="@string/loading"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_nm"
                        app:drawableStartCompat="@drawable/ic_movie_tag" />

                    <TextView
                        android:id="@+id/view_more_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/view_more"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_sm" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_movie"
                    style="@style/RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:drawablePadding="8dp"
                        android:text="@string/loading"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_nm"
                        app:drawableStartCompat="@drawable/ic_tv_tag" />

                    <TextView
                        android:id="@+id/view_more_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/view_more"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_sm" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_tv"
                    style="@style/RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>