<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailMediaActivity"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.BLU.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_back"
                    style="@style/FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_back"
                    app:elevation="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_cover"
                    style="@style/ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/cover"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    tools:ignore="ContentDescription" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img_poster"
                    style="@style/ImageView"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    app:riv_corner_radius="4dp" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/loading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_md"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/layout_score"
                    app:layout_constraintStart_toEndOf="@+id/img_poster"
                    app:layout_constraintTop_toBottomOf="@+id/img_cover" />

                <LinearLayout
                    android:id="@+id/layout_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/layout_score"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <TextView
                        android:id="@+id/tv_release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_md" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/release_date"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_nm" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_score"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_layout_score"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_title">

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_number"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_score_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/loading_number"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/font_xs"
                        app:drawableStartCompat="@drawable/ic_person_8" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_more_title"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/more_title"
                    android:src="@drawable/ic_info"
                    app:layout_constraintEnd_toEndOf="@+id/layout_score"
                    app:layout_constraintStart_toStartOf="@+id/layout_score"
                    app:layout_constraintTop_toBottomOf="@+id/layout_score" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="170dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_detail_media"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_trailer"
        style="@style/Button.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trailer"
        app:icon="@drawable/ic_play"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>