<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp"
    app:cardBackgroundColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_poster"
                    style="@style/ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintDimensionRatio="2:3"
                    android:contentDescription="@string/poster"/>

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_score"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/loading_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_sm"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_release_year"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/loading_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_sm"
                    android:maxLines="1"
                    app:layout_constraintEnd_toStartOf="@+id/tv_score"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_delete_36"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="invisible"
                    android:contentDescription="@string/remove_favorite" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="@dimen/font_sm"
            android:textStyle="bold"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/font_xs"
            android:maxLines="2"
            android:lines="2"
            android:ellipsize="end" />
    </LinearLayout>
</androidx.cardview.widget.CardView>